[Mac] Fullscreen Toolbar Janky Animation Fix

The browser UI doesn't update when the menubar is being revealed in 10.12+
which makes the toolbar janky. To smooth things out, we should animate
the toolbar in and out.

BUG=672254

Review-Url: https://codereview.chromium.org/2827383004
Cr-Commit-Position: refs/heads/master@{#467368}

Former-commit-id: 34fe593135e5c15e0660fca8a86b5dbd960e3255